#14 Update examples to use builders.
- Some other small changes as well.